--- a/posts/index.qmd
+++ b/posts/index.qmd
@@ -1,14 +1,15 @@
 ---
 title: "Blog"
+author: ""
 listing:
-  contents: posts
+  contents: "."
   sort: "date desc"
   type: default
   categories: true
   sort-ui: false
   filter-ui: false
+  page-size: 10
 page-layout: full
 title-block-banner: true
 ---
-
 
